<resources>

    <!-- Names and Titles !-->
    <string name="app_name" translatable="false">HomeSweetHome</string>
    <string name="nav_header_title" translatable="false">HomeSweetHome</string>
    <string name="nav_header_subtitle">A smart home system</string>

    <string name="actual_temperature">Actual temperature</string>
    <string name="heating">Heating</string>
    <string name="light">Light</string>
    <string name="multiple_values">Multiple values</string>
    <string name="room">Room</string>
    <string name="rule">Rule</string>
    <string name="target_temperature">Target temperature</string>
    <string name="temperature">Temperature</string>

    <!-- Menu !-->
    <string name="menu_devices">Home</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_values">Values</string>
    <string name="menu_settings">Settings</string>

    <!-- General Actions !-->
    <string name="action_apply_to_all">Apply to all</string>
    <string name="action_clear">Clear all</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_sort_by">Sort</string>
    <string name="action_group_by">Group</string>
    <string name="action_filter_by">Filter</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_rename">Rename</string>
    <string name="action_done">Done</string>
    <string name="action_new">New</string>
    <string name="action_search">Search</string>

    <!-- Items !-->
    <string name="item_unnamed">Unnamed</string>

    <!-- Miscellaneous !-->
    <string name="n_selected">$1 selected</string>

    <!-- Tag !-->
    <string name="action_tag_new">New tag</string>
    <string name="confirmation_tag_delete">Delete tag \"$1\"?</string>

    <!-- Response !-->
    <string name="resp_update_error">An error occurred while updating</string>
    <string name="resp_item_no_longer_exists">The item you were viewing no longer exists</string>

    <!-- UID !-->
    <string name="uid" translatable="false">uid</string>

    <!-- Sorting !-->
    <string name="sorting_criteria">Sorting criteria</string>
    <string name="sorting_criteria_manually" >Manually</string>
    <string name="sorting_criteria_name" >Name</string>
    <string name="sorting_criteria_room" >Room</string>
    <string name="sorting_order">Sorting order</string>
    <string name="sorting_order_ascending">Ascending</string>
    <string name="sorting_order_descending">Descending</string>

    <!-- Devices !-->
    <string name="action_device_change_room">Change room</string>
    <string name="pref_devices_sorting_criterion_key" translatable="false">devices_sorting_type</string>
    <string name="pref_devices_sorting_order_key" translatable="false">devices_sorting_order</string>
    <string name="pref_devices_filtering_key" translatable="false">devices_sorting</string>

    <!-- Rule !-->
    <string name="action_select_a_rule">Select a Rule</string>
    <string name="confirmation_1_rule_delete">Delete 1 rule?</string>
    <string name="confirmation_n_rules_delete">Delete $1 rules?</string>
    <string name="pref_rules_sorting_criterion_key" translatable="false">rules_sorting_type</string>
    <string name="pref_rules_sorting_order_key" translatable="false">rules_sorting_order</string>

    <!-- Weekly Time Span !-->
    <string name="confirmation_weekly_time_span_clear_all">Clear all time spans?</string>
    <string name="confirmation_weekly_time_span_apply_to_all">Apply this value to all time spans?</string>
    <string name="confirmation_weekly_time_span_delete">Delete this time span?</string>
    <string name="notice_weekly_time_span_overlaying">Time spans cannot overlay each other</string>
    <string name="notice_weekly_time_span_no_length">Time spans cannot start at the same time they end</string>

    <!-- Rule Value !-->
    <string name="confirmation_1_value_delete">Delete 1 value?</string>
    <string name="confirmation_n_values_delete">Delete $1 values?</string>
    <string name="pref_values_sorting_criterion_key" translatable="false">rules_sorting_type</string>
    <string name="pref_values_sorting_order_key" translatable="false">rules_sorting_order</string>

    <!-- Settings !-->
    <!-- Network !-->
    <string name="pref_network_category_title">Network</string>

    <string name="pref_network_host_title">Host</string>
    <string name="pref_network_host_key" translatable="false">host</string>

    <string name="pref_network_port_title">Port</string>
    <string name="pref_network_port_key" translatable="false">port</string>

    <string name="pref_network_automatic_update_title">Update automatically</string>
    <string name="pref_network_automatic_update_key" translatable="false">network_automatic_update_delay</string>

    <!-- Temperature !-->
    <string name="pref_temperature_category_title">Temperature</string>
    <string name="pref_temperature_category_key" translatable="false">temperature</string>

    <string name="pref_temperature_unit_title">Unit</string>
    <string name="pref_temperature_unit_key" translatable="false">temperature_unit</string>

    <string name="pref_temperature_decimals_title">Decimal digits</string>
    <string name="pref_temperature_decimals_key" translatable="false">temperature_decimals</string>

    <string name="pref_temperature_step_title">Step size</string>
    <string name="pref_temperature_step_key" translatable="false">temperature_increment</string>

    <string name="pref_temperature_round_to_next_step_title">Round to next step</string>
    <string name="pref_temperature_round_to_next_step_key" translatable="false">temperature_round_to_next_increment</string>

    <!-- User Interface !-->
    <string name="pref_ui_category_title">User Interface</string>

    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_key" translatable="false">dark_mode</string>
    <string name="pref_default_theme" translatable="false">3</string>

</resources>
