<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by"
        android:icon="@drawable/ic_sort_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_sort_by"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_by"
        android:icon="@drawable/ic_filter_none_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_filter_by"
        app:showAsAction="never" />

</menu>
