<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/menu_rules" />

        <item
            android:id="@+id/nav_values"
            android:icon="@drawable/ic_label_black_24dp"
            android:title="@string/menu_values" />

    </group>

    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />

    </group>

</menu>
