<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_devices"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_devices"
        android:name="bedbrains.homesweethomeandroidclient.ui.device.DevicesFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_devices">
        <action
            android:id="@+id/action_nav_devices_to_nav_heating"
            app:destination="@id/nav_heating"
            app:popUpTo="@+id/nav_devices" />
        <action
            android:id="@+id/action_nav_devices_to_nav_light"
            app:destination="@id/nav_light"
            app:popUpTo="@id/nav_devices" />
    </fragment>

    <fragment
        android:id="@+id/nav_rules"
        android:name="bedbrains.homesweethomeandroidclient.ui.rule.RulesFragment"
        android:label="@string/menu_rules"
        tools:layout="@layout/fragment_rules">
        <action
            android:id="@+id/action_nav_rules_to_nav_weekly_rule"
            app:destination="@id/nav_weekly_rule" />
    </fragment>

    <fragment
        android:id="@+id/nav_values"
        android:name="bedbrains.homesweethomeandroidclient.ui.value.ValuesFragment"
        android:label="@string/menu_values"
        tools:layout="@layout/fragment_values">
        <action
            android:id="@+id/action_nav_values_to_nav_rule_value"
            app:destination="@id/nav_rule_value" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="bedbrains.homesweethomeandroidclient.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@xml/preferences" />

    <fragment
        android:id="@+id/nav_heating"
        android:name="bedbrains.homesweethomeandroidclient.ui.device.heating.HeatingFragment"
        tools:layout="@layout/fragment_heating">
        <action
            android:id="@+id/action_nav_heating_to_nav_weekly_rule"
            app:destination="@id/nav_weekly_rule" />
    </fragment>

    <fragment
        android:id="@+id/nav_light"
        android:name="bedbrains.homesweethomeandroidclient.ui.device.light.LightFragment"
        tools:layout="@layout/fragment_light">
        <action
            android:id="@+id/action_nav_light_to_nav_weekly_rule"
            app:destination="@id/nav_weekly_rule" />
    </fragment>

    <fragment
        android:id="@+id/nav_weekly_rule"
        android:name="bedbrains.homesweethomeandroidclient.ui.rule.weeklyrule.WeeklyRuleFragment"
        tools:layout="@layout/fragment_weekly_rule" />

    <fragment
        android:id="@+id/nav_rule_value"
        android:name="bedbrains.homesweethomeandroidclient.ui.value.rulevalue.RuleValueFragment"
        tools:layout="@layout/fragment_rule_value" />

</navigation>